--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Password Manager</string>
   </property>
   <property name="locale">
    <locale language="English" country="UnitedStates"/>
