Added auditory feedback based on password strength

--- a/editdialog.ui
+++ b/editdialog.ui
@@ -106,5 +106,22 @@
   <tabstop>passwordEdit</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
+   <receiver>EditDialog</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>199</x>
+     <y>158</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>199</x>
+     <y>89</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
