--- a/editdialog.ui
+++ b/editdialog.ui
@@ -63,7 +63,7 @@
        </property>
       </spacer>
      </item>
-     <item row="4" column="1">
+     <item row="5" column="1">
       <spacer name="verticalSpacer_2">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -85,6 +85,22 @@
      </item>
      <item row="2" column="1">
       <widget class="QLineEdit" name="urlEdit"/>
+     </item>
+     <item row="4" column="1">
+      <widget class="QProgressBar" name="strengthMeter">
+       <property name="maximum">
+        <number>5</number>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+       <property name="textVisible">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="strengthLabel"/>
      </item>
     </layout>
    </item>
